# wallpaper-universe

./: .cursor.json  .cursorignore  .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  FINAL_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  package-lock.json  package.json  turbo.json  version.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy-web.yml  release-desktop.yml  release-mobile.yml
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: README.md  pubspec.yaml
apps/mobile/lib/: main.dart
apps/web/: .eslintrc.json  README.md  next.config.js  package.json  tailwind.config.ts  wrangler.toml
apps/web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
backend/: README.md  schema.sql
backend/admin/: package.json  wrangler.toml
backend/api/: package.json  tsconfig.json  wrangler.toml
backend/shared/: ai-analysis.ts  auth-system.ts  auth.ts  errors.ts  i18n.ts  index.ts  kv.ts  logger.ts  queue.ts  rate-limit.ts  security.ts  types.ts  upload.ts
backend/web-app/: package.json  wrangler.toml
docs/: SETUP.md  cloudflare.md
scripts/: sync.mjs
(+33 files in other folders)
